<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_distance_meter">Enter distance (meter)</string>
    <string name="enter_time_second">Enter time (second)</string>
    <string name="clear">CLEAR</string>
    <string name="average_speed_km_h">Average Speed (km/h)</string>
    <string name="toast_empty">Distance and time are required.</string>
    <string name="Toast_zero">Time must be greater than zero.</string>
    <string name="dialog_limit">Speed is over limit!</string>
    <string name="calculate">CALCULATE</string>
</resources>