<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/speed_meter" />

    <TextView
        android:id="@+id/logo_textView"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:text="SPEED CALCULATOR"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/entermeter_EditText"
        android:layout_width="296dp"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        android:background="#CBCBCB"
        android:hint="@string/enter_distance_meter"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/entertime_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/entertime_textView"
        android:layout_width="295dp"
        android:layout_height="42dp"
        android:background="#CBCBCB"
        android:hint="@string/enter_time_second"
        android:includeFontPadding="true"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entermeter_EditText" />

    <TextView
        android:id="@+id/average_textView"
        android:layout_width="276dp"
        android:layout_height="47dp"
        android:text="@string/average_speed_km_h"
        android:textColor="#FF0000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/answer_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_button" />

    <TextView
        android:id="@+id/answer_textView"
        android:layout_width="295dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average_textView"
        tools:text="answer" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/average_textView"
        app:layout_constraintEnd_toStartOf="@+id/calculate_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entertime_textView" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/clear_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toTopOf="@+id/clear_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>